# rate-limit-patterns

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  formatter.py  mock_api_server.py  runner.py
benchmarks/scenarios/: __init__.py  fairness.py  latency.py  memory.py  multi_instance.py  redis_latency.py
demo/: benchmark-proof.tape
docs/: ALGORITHMS.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  PRODUCTION_RECIPES.md
src/rate_limit_patterns/: __init__.py  decorators.py  exceptions.py  limiter.py  models.py
src/rate_limit_patterns/algorithms/: __init__.py  base.py  leaky_bucket.py  sliding_window.py  token_bucket.py
src/rate_limit_patterns/backend/: __init__.py  _local_shared.py  _redis_shared.py  base.py  keying.py  local.py  redis.py  sync.py
src/rate_limit_patterns/backend/lua/: leaky_bucket.lua  sliding_window.lua  token_bucket.lua
src/rate_limit_patterns/middleware/: __init__.py  _shared.py  asgi.py  fastapi.py  headers.py
tests/: conftest.py
tests/integration/: __init__.py  test_ci_guard.py  test_contract_equivalence.py  test_fastapi.py  test_middleware.py  test_redis_integration.py
tests/unit/: __init__.py  test_algorithm_comparison.py  test_algorithm_protocol.py  test_backend_protocol.py  test_benchmark_formatter_fairness.py  test_decorators.py  test_keying.py  test_leaky_bucket.py  test_limiter.py  test_local_backend.py  test_rate_limit_config.py  test_rate_limit_result.py  test_redis_backend.py  test_sliding_window.py  test_sync_backends.py  test_token_bucket.py
